# MinecraftMITM

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  test.cpp
src/network/: ByteManipulation.cpp  ByteManipulation.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  NetworkAddress.h  Packet.h  PacketHandler.cpp  PacketHandler.h  Proxy.cpp  Proxy.h
src/type/: Position.cpp  Position.h  PositionAndRotation.cpp  PositionAndRotation.h  VarInt.cpp  VarInt.h  VarLong.cpp  VarLong.h  VarNumber.cpp  VarNumber.h
test/type/: test_Position.cpp
